--- a/GlitchGarden.CSharp.csproj
+++ b/GlitchGarden.CSharp.csproj
@@ -76,8 +76,9 @@
     <Compile Include="Assets\Scripts\MusicManager.cs" />
     <Compile Include="Assets\Scripts\OptionsController.cs" />
     <Compile Include="Assets\Scripts\PlayerPrefsManager.cs" />
+    <Compile Include="Assets\Scripts\Projectile.cs" />
     <Compile Include="Assets\Scripts\SetStartVolume.cs" />
-    <Compile Include="Assets\Stone.cs" />
+    <Compile Include="Assets\Scripts\Stone.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
